ajout de l'action de mis à jour git

--- a/application/views/scripts/gitupdate/gitupdate.phtml
+++ b/application/views/scripts/gitupdate/gitupdate.phtml
@@ -1,4 +1,4 @@
 <?php
 
-echo shell_exec('cd /var/www/zeus & git pull');
+echo shell_exec('time cd /var/www/zeus & git pull');
 echo shell_exec('who');
