--- a/application/views/scripts/gitupdate/gitupdate.phtml
+++ b/application/views/scripts/gitupdate/gitupdate.phtml
@@ -1,4 +1,4 @@
 <?php
 
-echo shell_exec('cd /var/www/zeus && git pull 2>&1'); 
+echo shell_exec('cd /var/www/zeus && git fetch && git rebase origin/master 2>&1'); 
 
