--- a/application/views/scripts/gitupdate/gitupdate.phtml
+++ b/application/views/scripts/gitupdate/gitupdate.phtml
@@ -1,5 +1,5 @@
 <?php
 
 echo exec('cd /var/www/zeus && git fetch && git rebase origin/master 2>&1'); 
-
+echo exec('cd /var/www/zeus aa git rebase --abort');
 
