--- a/application/views/scripts/gitupdate/gitupdate.phtml
+++ b/application/views/scripts/gitupdate/gitupdate.phtml
@@ -1,4 +1,5 @@
 <?php
+echo exec('cd /var/www/zeus $$ git stash');
 echo exec('cd /var/www/zeus && git rebase --abort');
 echo exec('cd /var/www/zeus && git fetch && git rebase origin/master 2>&1'); 
 
