--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head
+<head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Zeus - Accueil</title>
@@ -12,7 +12,7 @@
     <?= $this->headLink()->prependStylesheet('/css/bootstrap-theme.min.css'); ?>
     <?= $this->headLink()->prependStylesheet('/css/bootstrap.min.css'); ?>
     <?= $this->headLink()->prependStylesheet('/css/jquery-ui-1.10.4.min.css'); ?>
-    <?= $this->headScript ()->prependFile ( '/js/modernizr-2.6.2-respond-1.1.0.min.js' ); ?>
+    
 </head>
 <body>
 	<div class="container">
