--- a/application/views/scripts/carrousel/index.phtml
+++ b/application/views/scripts/carrousel/index.phtml
@@ -1,9 +1,1 @@
-<div class="row"> 
-	<div class="col-md-9"> 
-	<h2>Zone principale</h2> 
-</div> 
- 
-<div class="col-md-3"> 
-<h2>Widgets</h2> 
-                 </div> 
-           </div>
+carrousel
